<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_selected_day"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/selected_day"
        android:textColor="#ff0000"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="545dp"
        android:id="@+id/recycler_view_activities"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/activities_list_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floating_action_button"
        android:src="@drawable/icon_add"
        android:contentDescription="@string/fab_description"
        android:layout_gravity="end|bottom"
        android:layout_margin="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save_day"
            android:text="@string/button_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_delete_day"
            android:layout_marginStart="5dp"
            android:text="@string/button_delete_day"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_back"
            android:layout_marginStart="5dp"
            android:text="@string/button_back"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

</LinearLayout>