<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/text_view_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/progress"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_progress"
        android:layout_toEndOf="@id/text_view_progress"
        android:layout_alignBaseline="@id/text_view_progress"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_box_save"
        android:text="@string/save_progress"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/text_view_progress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_new_progress"
        android:text="@string/new_progress"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_view_progress"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete_progress"
        android:text="@string/button_delete_progress"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/text_view_progress"
        android:layout_marginTop="25dp"/>

</RelativeLayout>