<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/text_view_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:text="@string/activity_name_label"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_toEndOf="@id/text_view_name_label"
            android:layout_alignBaseline="@id/text_view_name_label"
            android:layout_marginEnd="3dp"/>

        <TextView
            android:id="@+id/text_view_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:text="@string/category_label"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_category"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_below="@id/text_view_name"
            android:layout_toEndOf="@id/text_view_category_label"
            android:layout_marginStart="3dp"
            android:layout_alignBaseline="@id/text_view_category_label"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_completion"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_view_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_completion_label"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/completion_label"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@id/text_view_completion"
            android:layout_alignBaseline="@id/text_view_completion"
            android:layout_below="@id/text_view_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_points_label"
            android:text="@string/points_label"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_view_category_label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_points"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_below="@id/text_view_category_label"
            android:layout_toEndOf="@id/text_view_points_label"
            android:layout_alignBaseline="@id/text_view_points_label"
            android:layout_marginStart="3dp"/>

        <CheckBox
            android:id="@+id/check_box_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_completion_label"
            android:layout_alignBaseline="@id/text_view_points_label"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"
            android:text="@string/is_planned"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>